--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <span><a href="about.html" class="pages">About </a></span>
+    <span><a href="projects.html" class="pages">Projects </a></span>
+    <span><a href="contact.html" class="pages">Contact</a></span>
     <p>
       all about me, a photo, and a link to my insta and linked in and maybe
       github. maybe also mention my interest in space science
