--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <span><a href="about.html" class="pages">About </a></span>
+    <span><a href="projects.html" class="pages">Projects </a></span>
+    <span><a href="contact.html" class="pages">Contact</a></span>
     <p>
       this is basically a contact card: full names, cell, email, linkedin and a
       picuture with a catchy salutation/greeting/message
