--- a/designer.html
+++ b/designer.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <span><a href="about.html" class="pages">About </a></span>
+    <span><a href="projects.html" class="pages">Projects </a></span>
+    <span><a href="contact.html" class="pages">Contact</a></span>
     <p>
       this is where everything design related comes so links to insta and just
       photos of my work, my spotify grid and how pretty it looks my photos and
