--- a/developer.html
+++ b/developer.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <span><a href="about.html" class="pages">About </a></span>
+    <span><a href="projects.html" class="pages">Projects </a></span>
+    <span><a href="contact.html" class="pages">Contact</a></span>
     <p>
       list of technologies i am familiar with, i should also use the cv hloni
       made to help me with this. i should link my github and showcase the
