--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <span><a href="about.html" class="pages">About </a></span>
+    <span><a href="projects.html" class="pages">Projects </a></span>
+    <span><a href="contact.html" class="pages">Contact</a></span>
     <p>
       this page will have 2 cards side by side the one side will have 'the
       developer' and the other 'the designer' with a bit of a description as to
