--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <span><a href="home.html" class="pages">Home </a></span>
     <span><a href="about.html" class="pages">About </a></span>
     <span><a href="projects.html" class="pages">Projects </a></span>
     <span><a href="contact.html" class="pages">Contact</a></span>
