--- a/about.html
+++ b/about.html
@@ -20,5 +20,103 @@
       all about me, a photo, and a link to my insta and linked in and maybe
       github. maybe also mention my interest in space science
     </p>
+    <p>
+      <h1>Hey its wendz</h1>
+I never thought that I’d be the one saying those words. I’ve always seen posts of people from tech Twitter who have shared that they got a job on Twitter or that online presence helped them secure a job. Little did I know that I would be a witness to this too.
+
+Welcome to all, and thank you for taking your time to read about my journey of how I got into tech, the challenges I’ve faced, the resources I’ve used, how I grew my Twitter account, and how I landed my first tech job.
+
+Background
+I am South African by nationality, and I’m 20 years old. I had always wanted to be a surgeon or pharmacist, but unfortunately, I’m not gifted in maths 😂. Since I couldn’t pursue anything in medicine, I considered graphic design but chose not to pursue it as jobs are higher in supply than demand.
+
+I then enrolled at a private institution to acquire a diploma in IT for three years. I started college in 2020 and didn’t like how things ran there. Not only did lecturers only give attention to the second and third years, but they were resigning, leaving the institution with a shortage of lecturers. Even after covid hit us in March, they did not have an excellent online structure for distance learning. We had to teach ourselves, and I thought, why should I pay for education when I can get it free online? 💁‍♀️
+
+I discovered web development because of my cousin. She was starting her small haircare business. When thinking of having someone to make her website, she thought of me. I had no idea where to even begin, I didn’t even know how to use WordPress. So I did some research on how to create websites, and Brad Traversy’s HTML crash course popped up in the recommendations.
+
+I immediately watched it and was hooked. I saw that creating a website was a combination of coding and designing, which is amazing since I wanted to be a graphic designer and always had an interest in computers, I thought it was just perfect. And that’s how I dipped my toes into tech.
+
+This is the website I built for her when I was starting out.
+
+Challenges
+Now that I’d discovered web development, I decided that I wanted to quit college in 2021 and self-teach. You can just imagine how hard it was to tell my parents about it. I didn’t want to be a disappointment in the family because I’m the eldest child and the first to go to college. Regardless, I sat them down and told them my decision.
+
+I reasoned with them about the situation in college and how expensive it was to cover the costs to study there. Yes, I had won a bursary, but how were the rest of the costs going to be covered? My father is the sole breadwinner, and his salary wasn’t going to cover those costs – in fact, it’s more than he earned.
+
+They gladly understood and let me be, but extended family members had no faith in me when I told them of my decision. It was subtle, but I felt the disappointment. Not only was family a challenge, but learning on its own was so hard.
+
+I’d feel motivated for the week, and I’d code almost every day, read the documentation and try to memorize everything, and learn multiple things at once, and all that got me so burnt out that I didn’t code for three months straight! If that’s not enough, CSS and JavaScript were not kind to me! And I had no laptop, just my phone.
+
+
+I literally would call myself stupid, dumb, and regret leaving college in the first place. I’d compare myself with others in the #100daysOfCode, and that honestly didn’t help. I was, and am, inconsistent, which is my biggest weakness. I was dying inside of anxiety and depression. I never told anyone. I chose to deal with it alone.
+
+
+What helps me keep going is my motivation.
+
+See, I love ‘De Sterrennacht’ by Vincent Van Gogh; it’s my favorite painting of all time. Each time I look at it, it gives me a sense of calm and peace, just as the crux constellation I gaze upon every night does. I saved that painting as my wallpaper so that when I look at it, I am motivated and work hard enough to afford a plane ticket to the Museum of Modern Art in New York, so I can see the original painting with my own two eyes. Weird? I’m okay with weird 🙂
+
+Trecia Kat's desktop wallpaper - a copy of Van Gogh's De Sterrennacht'
+Resources
+I first discovered Freecodecamp.org in late February and did the responsive web design course for about three months using my phone.
+
+Then I used JavaScript.info to learn JS. W3schools.com has the best tutorials, examples, and exercises to do. Scrimba is excellent for interactive learning and my favorite of all, I am still doing the frontend career path, and it’s great. Also, Codedamn is a fantastic platform from which to learn.
+
+Additional resources are available here:
+
+
+Online Presence
+I joined Twitter in 2020 because I felt it would seem weird that, as a teenager, I didn’t have any social media presence. I also didn’t want to feel left out. I didn’t engage with anyone, I just followed Marvel posts and all. In 2021, I participated in the #100daysofcode, and that’s when I became active. In January 2021, I only had three followers.
+
+Today, I have over 25K followers; like what!!! I never planned this; it just happened. I today still ask myself, “Why do people follow me 🙆‍♀️?” I’m just a crackpot, and I don’t feel like a content creator. My Twitter timeline is my diary.
+
+I guess how I grew my Twitter account was just being myself. I don’t steal/copy other people’s tweets, I am genuinely interested in others and engage with those who follow me. I don’t clickbait others, nor am I overly obsessed about gaining followers. In fact, it gives me anxiety that so many people are interested in what I have to say.
+
+I chose my niche, CSS, and made it my own. I created CSS arts.
+
+
+My blog is mainly CSS articles, and people know me as the funny “CSS girl.”
+
+
+Or not so long ago, the “As a developer” questions girl.
+
+As a developer, I don't feel like coding everyday. Lol 👀
+
+— Trecia Kat 👩🏽‍💻 (@TreciaKS) June 11, 2022
+My point is, I want to be identified by something positive when someone thinks of “Trecia Kat,” just as motivational and inspirational comes to mind when I think of Danny Thompson. 🙂
+
+First Tech Job
+My intention was to self-study and then, after a year, apply for a full-time job here in South Africa. In the meantime, I was trying to figure out ways to make money while learning how to code. Then this message popped up in my DM requests from Dan Hampton 😮:
+
+Twitter direct message from Dan Hampton asking Trecia if she'd be interested in some freelance work.
+This was in August 2021, I was only familiar with HTML and CSS, and I didn’t think I was good enough for this freelance gig. But it turned out great for me, and it was my first exposure to remote work. I was assigned projects to design/build UI components using Tailwind CSS and basic React and to compose end-user documentation for the application.
+
+In January 2022, my contract ended, and I worked on myself to learn and improve my JavaScript and React. Then I learned of developer advocacy and developer relations because of Pratim. I became interested in this position and was eager to learn more.
+
+
+After that tweet, I had a few interviews, but sadly, I didn’t get any of them. Reasons being:
+
+They’ve never hired in Africa, logistics issues
+It was remote only for US and EU residents
+Relocation was for seniors only.
+At least I didn’t get rejected, but it was sad that I didn’t get the chance to work for the companies (and have a person I admire to work alongside). In the midst of these interviews, I received a DM from Daniel Phiri, Developer Relations Lead of Strapi 🙃:
+
+Twitter direct message asking Trecia if she'd be interested in joining their team as a developer advocate intern/ junior.
+I was delighted to hear that but unsure of myself or my skillset. I immediately told him I had no degree, and his response comforted me. I decided to go ahead with the interview. It was a six-round interview process:
+
+Introductory call
+Technical assessment (take home)
+Technical debrief
+Team meeting
+Value assessment
+Closing call.
+I passed all rounds, and I got the job! 🎆🎊✨
+
+Final Thoughts
+I don’t know if my journey was easy or difficult. The only challenges I’ve faced so far have just been a “me” problem. I’m tough on myself; I don’t give myself a break when needed; I used to feel so guilty if I watched TV and did no coding. I feel like the more I learn, the more I forget what I’ve learned, and the more I don’t know anything!
+
+Right now, I’m happy I have a job, even if it’s only for six months. I’m glad that I’ve gotten recognized and hired by Strapi. My only challenge now is my imposter syndrome and inability to stop thinking about how inferior I am compared to those who went to college. The anxiety of “will I perform well?” or “will I be able to accomplish whatever I am assigned?” constantly runs in my mind.
+
+Illustration of man climbing a ladder to a trophy
+All I know is that there must be a reason why I was hired, regardless of my anxieties and imposter syndrome. Rome was not built in one day.
+    </p>
   </body>
 </html>
