--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
       <div class="row mediabanner">
         <div class="col">
           <a
-            href="https://www.intsagram.com/wendiemat/"
+            href="https://www.instagram.com/wendiemat/"
             target="_blank"
             title="Instagram Profile"
           >
