--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wendy Mathabela</title>
+<link rel="icon" type="images/17 (2).png" href="wendiemat.png">
 
     <link
       rel="stylesheet"
@@ -18,7 +19,7 @@
 
       <!-- my logo -->
       <div class="logo">
-        <img src="images/17 (2).png" alt="Trecia.logo" width="50px" />
+        <img src="images/17 (2).png" alt="wendiemat.logo" width="50px" />
       </div>
 
       <!-- menu -->
