--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wendy Mathabela</title>
-<link rel="icon" type="images/17 (2).png" href="wendiemat.png">
+    <link rel="icon" src="images/17 (2).png" href="wendiemat.png">
 
     <link
       rel="stylesheet"
