--- a/home.html
+++ b/home.html
@@ -239,7 +239,7 @@
                 title="Instagram Profile"
               >
                 <img
-                  src="images/instagram-logo.png"
+                  src="images/icons/instagram-logo.png"
                   alt="intsagram logo"
                   class="img-fluid"
               /></a>
@@ -251,7 +251,7 @@
                 title="LinkedIn Profile"
               >
                 <img
-                  src="images/linkedin.png"
+                  src="images/icons/linkedin.png"
                   title="linkedin logo"
                   class="img-fluid"
               /></a>
@@ -263,7 +263,7 @@
                 title="Github"
               >
                 <img
-                  src="images/github1.png"
+                  src="images/icons/github1.png"
                   alt="intsagra logo"
                   class="img-fluid"
               /></a>
@@ -275,7 +275,7 @@
                 title="Spotify Profile"
               >
                 <img
-                  src="images/spotify.png"
+                  src="images/icons/spotify.png"
                   alt="spotify logo"
                   class="img-fluid"
               /></a>
