--- a/home.html
+++ b/home.html
@@ -123,6 +123,10 @@
           <span class="skills-name">javascript</span>
           <span class="skills-name">python</span>
           <span class="skills-name">java</span>
+          <span class="skills-name">git</span>
+          <span class="skills-name">github</span>
+          <span class="skills-name">react</span>
+          <span class="skills-name">jsx</span>
         </div>
       </div>
     </section>
