--- a/home.html
+++ b/home.html
@@ -266,7 +266,7 @@
       
       <br />
       <div class="cover">
-        <a href="contact.html">let's talk</a>
+        <a href="#contact">let's talk</a>
       </div>
     </section>
 
