--- a/home.html
+++ b/home.html
@@ -103,9 +103,9 @@
             id="about"
             target="blank"
             class="about-link"
-            href="https://treciaks.hashnode.dev"
-            >VISIT MY BlOG</a
-          >
+            href=""
+            >MY BlOG</a
+          > <small>coming soon...</small>
         </div>
       </div>
     </section>
