--- a/home.html
+++ b/home.html
@@ -177,10 +177,21 @@
                     >Live Demo</a
                   >
           </div>
+          <div class="project">
+              <img src="images/projects/tempforecastapp.png" loading="lazy" />
+                  <h2 class="work-heading">Temp Forecast</h2>
+                  <p>created with <code>python</code></p>
+                  <a
+                    target="blank"
+                    href="https://github.com/wendiemat/forecast" 
+                    >Code</a
+                  >
+                  <a target="blank" href="https://tempforecastapp.netlify.app/"
+                    >Live Demo</a
+                  >
+          </div>
           <div class="empty-spot"></div>
           <div class="empty-spot"></div>
-          <div class="empty-spot"></div>
-
           
 
 <br/>
